<resources>
    <string name="app_name">Swoosh</string>
    <string name="go_all_in">go all in</string>
    <string name="on_going_all_out">on going all out</string>
    <string name="desired_league">Desired League:</string>
    <string name="find_team"><![CDATA[Find a team in your city & dominate\nyour league]]></string>
    <string name="get_started">Get started</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">next</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">finish</string>
    <string name="select_league_toast">Please select a league</string>
    <string name="select_skill_toast">Please select a skill level</string>
</resources>
