<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.LeagueActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/desiredleaguebg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/swooshlogo" />

        <TextView
            android:id="@+id/desired_league"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/desired_league"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ToggleButton
                android:id="@+id/mens"
                style="@style/swoosh_button"
                android:onClick="onMensClicked"
                android:text="@string/mens"
                android:textAllCaps="false"
                android:textOff="@string/mens"
                android:textOn="@string/mens"/>

            <ToggleButton
                android:id="@+id/womens"
                style="@style/swoosh_button"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:onClick="onWomensClicked"
                android:text="@string/womens"
                android:textAllCaps="false"
                android:textOff="@string/womens"
                android:textOn="@string/womens"/>

            <ToggleButton
                android:id="@+id/co_ed"
                style="@style/swoosh_button"
                android:onClick="onCoEdClicked"
                android:text="@string/co_ed"
                android:textAllCaps="false"
                android:textOff="@string/co_ed"
                android:textOn="@string/co_ed"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/leagueNextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/montserrat"
        android:onClick="leagueNextClicked"
        android:text="@string/next"
        android:textColor="@color/colorAccent"
        tools:targetApi="jelly_bean" />
</FrameLayout>